// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StepIndicator > should limit active index to max number of steps 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col"
  >
    <span
      class="inline-block mx-auto mb-2 font-semibold sm:hidden text-theme-secondary-text"
    >
      3
    </span>
    <ul
      class="flex flex-row gap-2"
    >
      <li
        class="flex-1 h-1 transition-colors duration-300 rounded-[4px] bg-theme-warning-300"
      />
      <li
        class="flex-1 h-1 transition-colors duration-300 rounded-[4px] bg-theme-warning-300"
      />
      <li
        class="flex-1 h-1 transition-colors duration-300 rounded-[4px] bg-theme-warning-300"
      />
    </ul>
  </div>
</DocumentFragment>
`;

exports[`StepIndicator > should not render with an empty steps array 1`] = `<DocumentFragment />`;

exports[`StepIndicator > should render 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col"
  >
    <span
      class="inline-block mx-auto mb-2 font-semibold sm:hidden text-theme-secondary-text"
    >
      1
    </span>
    <ul
      class="flex flex-row gap-2"
    >
      <li
        class="flex-1 h-1 transition-colors duration-300 rounded-[4px] bg-theme-warning-300"
      />
      <li
        class="flex-1 h-1 transition-colors duration-300 rounded-[4px] bg-theme-primary-100 dark:bg-theme-secondary-800"
      />
      <li
        class="flex-1 h-1 transition-colors duration-300 rounded-[4px] bg-theme-primary-100 dark:bg-theme-secondary-800"
      />
    </ul>
  </div>
</DocumentFragment>
`;

exports[`StepIndicator > should render witth active index defined 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col"
  >
    <span
      class="inline-block mx-auto mb-2 font-semibold sm:hidden text-theme-secondary-text"
    >
      2
    </span>
    <ul
      class="flex flex-row gap-2"
    >
      <li
        class="flex-1 h-1 transition-colors duration-300 rounded-[4px] bg-theme-warning-300"
      />
      <li
        class="flex-1 h-1 transition-colors duration-300 rounded-[4px] bg-theme-warning-300"
      />
      <li
        class="flex-1 h-1 transition-colors duration-300 rounded-[4px] bg-theme-primary-100 dark:bg-theme-secondary-800"
      />
    </ul>
  </div>
</DocumentFragment>
`;
